# BhutanHyundaiMotors

HyundaiMotors/: .env  db.sqlite3  manage.py  pyproject.toml  requirements.txt  seed_data.py
HyundaiMotors/bhutan_hyundai_motors/: asgi.py  settings.py
HyundaiMotors/catalog/: models.py  views.py
HyundaiMotors/catalog/migrations/: 0001_initial.py  0002_initial.py
HyundaiMotors/core/: admin.py  views.py
HyundaiMotors/core/migrations/: 0001_initial.py  0002_successstory.py
HyundaiMotors/services/: forms.py  models.py  views.py
HyundaiMotors/services/migrations/: 0005_appointment_next_service_date_and_more.py
HyundaiMotors/templates/: 404.html
HyundaiMotors/templates/catalog/: part_confirm_delete.html  part_detail.html  part_form.html
HyundaiMotors/templates/services/: book_appointment.html
HyundaiMotors/templates/users/: dashboard.html  dashboard_fixed.html  register.html
HyundaiMotors/users/: admin.py  urls.py
HyundaiMotors/users/migrations/: 0002_customuser_profile_image.py  0003_alter_customuser_phone_alter_customuser_role.py
